--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,27 @@
-/**index.wxss**/
-.userinfo {
+.container{
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  height: 100rpx;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.episode{
+  margin-left: 20rpx;
+  margin-top: 4rpx;
 }
-
-.usermotto {
-  margin-top: 200px;
+.like{
+  margin-top: 6rpx;
+}
+.navi{
+  position: absolute;
+  bottom: 40rpx;
 }
