--- a/componets/classic/essay/index.wxml
+++ b/componets/classic/essay/index.wxml
@@ -1,6 +1,6 @@
-<!-- componets/classic/movie/index.wxml -->
+<!--componets/classic/essay/index.wxml-->
 <view hidden="{{ hidden }}" class="classic-container">
    <image class="classic-img" src="{{ img }}" />
-   <image class="tag" src="images/movie@tag.png" />
+   <image class="tag" src="images/essay@tag.png" />
    <text class="content">{{ content }}</text>
 </view>
