--- a/componets/epsoide/index.wxml
+++ b/componets/epsoide/index.wxml
@@ -1,8 +1,12 @@
-<!--componets/epsoide/index.wxml-->
+<!--componets/episode/index.wxml-->
 <view class="container">
-    <text >No.</text>
-    <text >{{ index }}</text>
-    <text>|</text>
-    <text>{{ month }}</text>
-    <text>{{ year }}</text>
+    <view class="index-container">
+        <text class="plain">No.</text>
+        <text class="index">{{ _index }}</text>
+        <view class="line"></view>
+    </view>
+    <view class="date-container">
+        <text class="month">{{ month }}</text>
+        <text class="year">{{ year }}</text>
+    </view>
 </view>
