--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,15 @@
 <!--index.wxml-->
-<v-epsoide index="{{ classic.index }}"/>
-<v-like bind:like="onLik" like="{{ classic.like_status }}" count="{{ classic.fav_nums }}"/>
-<v-movie img="{{ classic.image }}" content="{{ classic.content }} "/>
-<view class="container">
+<view  class="container">
+    <view class="header">
+        <v-episode class="episode" index="{{ classic.index }}"/>
+        <v-like class="like" bind:like="onLik" like="{{ likeStatus }}" count="{{ likeCount }}"/>
+    </view>
+    <v-movie hidden="{{ classic.type!=100 }}" img="{{ classic.image }}" content="{{ classic.content }} "/>
+    <v-music
+    wx:if="{{ classic.type==200 }}"
+    img="{{ classic.image }}" 
+    content="{{ classic.content }}"
+    src="{{ classic.url }}"/>
+    <v-essay hidden="{{ classic.type!=300 }}" img="{{ classic.image }}" content="{{ classic.content }} "/>
+    <v-navi bind:left="onNext" bind:right="onPrevious" title="{{ classic.title }}" first="{{ first }}" latest="{{ latest }}" class="navi"/>
 </view>
