--- a/componets/classic/music/index.wxml
+++ b/componets/classic/music/index.wxml
@@ -1,6 +1,6 @@
 <!--componets/classic/music/index.wxml-->
 <view hidden="{{ hidden }}" class="container">
-    <image src="{{ img }}" class="classic-img"/>
+    <image src="{{ img }}" class="classic-img {{ playing?'rotation':'' }}"/>
     <image class="player-img" bind:tap="onPlay" src="{{ !playing?playSrc:pauseSrc }}" />
     <image class="tag" src="images/music@tag.png" />
     <text>{{ content }}</text>
