--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -1,23 +1,83 @@
-<!--pages/book-detail/book-detail.wxml-->
+<!-- pages/book-detail/book-detail.wxml -->
 <wxs src="../../utils/filter.wxs" module="utils"></wxs>
 <view class="container">
-    <view class="head">
-        <image src="{{ book.image }}" />
-        <text class="title">{{ book.title }}</text>
-        <text class="author">{{ book.author }}</text>
+  <view class="head">
+    <image src="{{ book.image }}" />
+    <text class="title">{{ book.title }}</text>
+    <text class="author">{{ book.author }}</text>
+  </view>
+  <view class="sub-container">
+    <text class="headline">短评</text>
+    <text class="shadow" wx:if="{{comments==false}}">还没有短评</text>
+    <view class="comment-container">
+      <block wx:key="content" wx:for="{{  utils.limit(comments, 15) }}">
+        <v-tag tag-class="{{ tool.highlight(index) }}" text="{{ item.content }}">
+          <text class="num" slot="after">{{'+' + item.nums }}</text>
+        </v-tag>
+      </block>
     </view>
-    <view class="sub-container">
-        <text class="headline">短评</text>
-        <view class="comment-container">
-            <block wx:key="content" wx:for="{{ comments }}">
-                <v-tag tag-class="{{ index==0?'ex-tag1':''|| index==1?'ex-tag2':'' }}" text="{{ item.content }}">
-                    <text class="num" slot="after"> {{'+' + item.nums }} </text>
-                </v-tag>
-            </block>
-        </view>
+  </view>
+  <view class="sub-container">
+    <text class="headline">内容简介</text>
+    <text class="content" decode="{{ true }}">{{ utils.format(book.summary) }}</text>
+  </view>
+  <view class="sub-container">
+    <text class="headline">书本信息</text>
+    <!-- // pubdate subtitle pages price binding -->
+    <view class="detail-container">
+      <view class="vertical description">
+        <text>出版社:</text>
+        <text>出版年:</text>
+        <text>页数:</text>
+        <text>定价:</text>
+        <text>精装:</text>
+      </view>
+      <view class="vertical">
+        <text>{{book.publisher}}</text>
+        <text>{{book.pubdate}}</text>
+        <text>{{book.pages}}</text>
+        <text>{{book.price}}</text>
+        <text>{{book.binding}}</text>
+      </view>
     </view>
-    <view class="sub-container">
-        <text class="headline">内容简介</text>
-        <text class="content" decode="{{ true }}">{{ utils.format(book.summary) }}</text>
-    </view>
+  </view>
 </view>
+<view class="post-container" wx:if="{{ !posting }}">
+  <view bind:tap="onFakePost" class="post-fake">
+    <text>输入短评</text>
+  </view>
+  <view class="like-container">
+    <v-like bind:like="onLike" class="like" like="{{likeStatus}}" count="{{likeCount}}" />
+  </view>
+</view>
+<view class="posting-container" wx:if="{{posting}}">
+  <view class="post-header">
+    <text wx:if="{{comments !==''}}">仅可点击标签+1</text>
+    <text wx:else>暂无短评</text>
+    <text bind:tap="onCancel" class="cancel">取消</text>
+  </view>
+  <view class="comment-container">
+    <block wx:key="content" wx:for="{{  utils.limit(comments, 3) }}">
+        <v-tag bind:tapping="onPost" tag-class="{{ tool.highlight(index) }}" text="{{ item.content }}">
+          <text class="num" slot="after">{{'+' + item.nums }}</text>
+        </v-tag>
+      </block>
+  </view>
+  <input bindconfirm="onPost" class="post" placeholder='短评最多12个字'></input>
+</view>
+ <!-- wx:if="{{posting}}" -->
+<v-mask  wx:if="{{posting}}"/>
+<wxs module="tool">
+  var highlight = function(index) {
+    if(index == 0){
+      return 'ex-tag1'
+    }
+    if(index == 1){
+      return 'ex-tag2'
+    }
+    return ''
+  }
+  module.exports = {
+    highlight:highlight
+  }
+</wxs>
