--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -1,7 +1,7 @@
 <!--pages/book/book.wxml-->
-<view class="container">
+<view wx:if="{{!searching}}" class="container">
     <view class="header">
-        <view class="box">
+        <view class="box" bind:tap="onSearching">
             <image src="/images/icon/search.png"/>
             <text >搜索书籍</text>
         </view>
@@ -16,4 +16,5 @@
         
     </view>
 </view>
+<v-search bind:cancel="onCancel"  wx:if="{{searching}}" />
 
