--- a/utils/filter.wxs
+++ b/utils/filter.wxs
@@ -3,6 +3,10 @@ var format = function(text) {
     var reg = getRegExp('\\\\n', 'g')
     return text.replace( reg, '\n&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;')
 }
+var limit = function(array, length) {
+  return array.slice(0, length)
+}
 module.exports= {
-    format: format
+    format: format,
+    limit: limit
 }
