搜索的优化

--- a/componets/search/index.wxml
+++ b/componets/search/index.wxml
@@ -1,35 +1,40 @@
-<!--componets/seach/index.wxml-->
+<!-- componets/seach/index.wxml -->
 <view class="container">
   <view class="header">
     <view class="search-container">
       <image class="icon" src="images/search.png" />
-      <input   bind:confirm="onConfirm" placeholder-class='in-bar' placeholder='书籍名' class='bar' auto-focus="true" />
-      <image class="cancel-img" src="images/cancel.png" />
+      <input value="{{ q }}" bind:confirm="onConfirm" placeholder-class='in-bar' placeholder='书籍名' class='bar' auto-focus="true" />
+      <image bind:tap="onDelete" class="cancel-img" src="images/cancel.png" />
     </view>
     <view class="cancel" bind:tap="onCancel">取消</view>
   </view>
-      <view wx:if="{{!searching}}">
-        <view class="history">
-            <view class="title">
-                <view class="chunk"></view>
-                <text>历史搜索</text>
-            </view>
-            <view class="tags">
-                <block wx:key="" wx:for="{{historyWords}}">
-                    <v-tag bind:tapping="onConfirm" text="{{item}}" />
-                </block>
-            </view>
-        </view>
-        <view class="history hot-search">
-            <view class="title">
-                <view class="chunk"></view>
-                <text>热门搜索</text>
-            </view>
-            <view class="tags">
-                <block wx:key="" wx:for="{{hotWords}}">
-                    <v-tag bind:tapping="onConfirm" text="{{item}}" />
-                </block>
-            </view>
-        </view>
+  <view wx:if="{{!searching}}">
+    <view class="history">
+      <view class="title">
+        <view class="chunk"></view>
+        <text>历史搜索</text>
+      </view>
+      <view class="tags">
+        <block wx:key="" wx:for="{{historyWords}}">
+          <v-tag bind:tapping="onConfirm" text="{{item}}" />
+        </block>
+      </view>
     </view>
+    <view class="history hot-search">
+      <view class="title">
+        <view class="chunk"></view>
+        <text>热门搜索</text>
+      </view>
+      <view class="tags">
+        <block wx:key="" wx:for="{{hotWords}}">
+          <v-tag bind:tapping="onConfirm" text="{{item}}" />
+        </block>
+      </view>
+    </view>
+  </view>
+  <view wx:if="{{searching}}" class="books-container">
+    <block wx:for="{{dataArr}}" wx:key="{{item.id}}">
+      <v-book showLike="{{false}}" book="{{item}}" class="book" />
+    </block>
+  </view>
 </view>
