5/6 小程序的完善

--- a/componets/search/index.wxml
+++ b/componets/search/index.wxml
@@ -33,8 +33,11 @@
     </view>
   </view>
   <view wx:if="{{searching}}" class="books-container">
-    <block wx:for="{{dataArr}}" wx:key="{{item.id}}">
+    <block wx:for="{{dataArray}}" wx:key="{{item.id}}">
       <v-book showLike="{{false}}" book="{{item}}" class="book" />
     </block>
   </view>
+  <v-loading class="loading-center" wx:if="{{ loadingCenter }}" />
+  <v-loading class="loading" wx:if="{{ loading }}" />
+  <text wx:if="{{ noneResult }}" class="empty-tip">没有搜索到书籍</text>
 </view>
