--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,15 +1,16 @@
-<!--index.wxml-->
-<view  class="container">
-    <view class="header">
-        <v-episode class="episode" index="{{ classic.index }}"/>
-        <v-like class="like" bind:like="onLik" like="{{ likeStatus }}" count="{{ likeCount }}"/>
+<!-- index.wxml -->
+<view class="container">
+  <view class="header">
+    <v-episode class="episode" index="{{ classic.index }}" />
+    <view class="like-container">
+      <v-like class="like" bind:like="onLik" like="{{ likeStatus }}" count="{{ likeCount }}" />
+      <v-button class="share-btn" open-type="share">
+        <image class="share" slot="img" src="/images/icon/share.png" />
+      </v-button>
     </view>
-    <v-movie hidden="{{ classic.type!=100 }}" img="{{ classic.image }}" content="{{ classic.content }} "/>
-    <v-music
-    wx:if="{{ classic.type==200 }}"
-    img="{{ classic.image }}" 
-    content="{{ classic.content }}"
-    src="{{ classic.url }}"/>
-    <v-essay hidden="{{ classic.type!=300 }}" img="{{ classic.image }}" content="{{ classic.content }} "/>
-    <v-navi bind:left="onNext" bind:right="onPrevious" title="{{ classic.title }}" first="{{ first }}" latest="{{ latest }}" class="navi"/>
+  </view>
+  <v-movie hidden="{{ classic.type!=100 }}" img="{{ classic.image }}" content="{{ classic.content }} " />
+  <v-music wx:if="{{ classic.type==200 }}" img="{{ classic.image }}" content="{{ classic.content }}" src="{{ classic.url }}" />
+  <v-essay hidden="{{ classic.type!=300 }}" img="{{ classic.image }}" content="{{ classic.content }} " />
+  <v-navi bind:left="onNext" bind:right="onPrevious" title="{{ classic.title }}" first="{{ first }}" latest="{{ latest }}" class="navi" />
 </view>
