feat  接入线上开发环境

--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -24,7 +24,7 @@
     <view class="like-container">
         <image class="headline" src="/images/my/like.png" />
         <view class="preview-container">
-            <block wx:for="{{classics}}" wx:key="">
+            <block wx:for="{{classics}}" wx:key="id">
                 <v-preview bind:tapping="onJumpToDetail" class="preview" classic="{{item}}" />
             </block>
         </view>
